<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/go_button1"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/button_title_1"
        app:layout_constraintBottom_toTopOf="@+id/go_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_button2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/chk_hscode_button_text"
        app:layout_constraintBottom_toTopOf="@+id/go_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_button1" />

    <Button
        android:id="@+id/go_button3"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/button_title_3"
        app:layout_constraintBottom_toTopOf="@+id/go_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_button2" />

    <Button
        android:id="@+id/go_button4"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/button_title_4"
        app:layout_constraintBottom_toTopOf="@+id/go_button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_button3" />

    <Button
        android:id="@+id/go_button5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/button_title_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_button4" />

</android.support.constraint.ConstraintLayout>